# journal-entries

./: README.md  constants.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
journal_entries/: cli.py  constants.py  exceptions.py  main.py
tests/: test_main.py
tests/data/: example-statement.xlsx
