[tool.poetry]
name = "journal-entries"
version = "0.1.0"
description = ""
authors = ["Daniel Butler <me@daniel-butler.com>"]
readme = "README.md"

[tool.poetry.scripts]
je = "journal_entries.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^23.2.0"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
